--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
+alembic==1.10.3
 certifi==2022.12.7
 charset-normalizer==3.1.0
 greenlet==2.0.2
 idna==3.4
-psycopg2==2.9.5
+importlib-metadata==6.1.0
+importlib-resources==5.12.0
+Mako==1.2.4
+MarkupSafe==2.1.2
+psycopg2-binary==2.9.6
 pyTelegramBotAPI==4.10.0
 requests==2.28.2
 SQLAlchemy==2.0.8
 typing-extensions==4.5.0
 urllib3==1.26.15
+zipp==3.15.0
